# CamelRace

./: Makefile.am  configure.ac  play.sh
art/: guidelines.txt  suelorecorrido.blend  valla.blend  verbl.blend
art/models/: animatedCamel.blend  camel.blend  circuit.blend  start.blend  untitled.blend
art/models/palmeras/: BLENDSWAP_LICENSE.txt  palm trees.blend  palm trees.blend1  palm trees.blend2
art/templates/: imageset.xcf
code/: Makefile.am
code/include/: CamelWidget.h  GameScene.h  MainMenuScene.h  Model.h  SceneFactory.h  TeamMenuScene.h  UIConfig.h
code/src/: CamelWidget.cpp  GameScene.cpp  MainMenuScene.cpp  Model.cpp  SceneFactory.cpp  TeamMenuScene.cpp  main.cpp
config/: resources.cfg
config/scenes/: game.cfg  main_menu.cfg
media/gui/fonts/: MoanLisa-Big.font  MoanLisa-Small.font  MoanLisa.fontdef
media/gui/imagesets/: Menus.imageset
media/gui/overlays/: stats.overlay
media/gui/schemes/: TaharezLook.scheme
media/models/: Shack.material  Wood.material  camel.material  camel.mesh.xml  camel.skeleton  camel.skeleton.xml  chassis.mesh  externCurve.mesh.xml  fence.material  finish_x.mesh.xml  finish_y.mesh.xml  house.mesh.xml  internCurve.mesh.xml  leaf_mat_2.material  palm_tree_trunk_mat.material  palms.mesh.xml  plane.material  plane.mesh.xml  sky.material  sky_dome.mesh  start.mesh.xml  start_1.material  start_2.material  start_3.material  stones_1.material  stones_2.material  stones_3.material  transparent.material  wheel.mesh
src/: Makefile.am  main.cpp
